force-app/main/default/objects/Installation__c/Installation__c.object-meta.xml
<CustomObject>
    <label>Installation</label>
    <nameField>
        <displayFormat>BSE-{0000}</displayFormat>
        <label>Installation Checklist No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>