force-app/main/default/objects/Installation__c/fields/App_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>App_Set_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User ids and passwords for devices, website and apps  has been shown/emailed.</inlineHelpText>
    <label>App Set Up</label>
    <type>Checkbox</type>
</CustomField>