force-app/main/default/objects/Installation__c/fields/As_the_tile_hooks_go_up__c.field-meta.xml
<CustomField>
    <fullName>As_the_tile_hooks_go_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>As the tile hooks go up</label>
    <type>Checkbox</type>
</CustomField>