force-app/main/default/objects/Installation__c/fields/Battery_Customer_Check__c.field-meta.xml
<CustomField>
    <fullName>Battery_Customer_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Switch on the kettle and check the smart meter - if the sun&apos;s out or the batteries are charged there should be very little coming from the grid.</inlineHelpText>
    <label>Battery Customer Check</label>
    <type>Checkbox</type>
</CustomField>