force-app/main/default/objects/Installation__c/fields/Battery_Installation__c.field-meta.xml
<CustomField>
    <fullName>Battery_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you batteries wall mounted / on stand and securely attached</inlineHelpText>
    <label>Battery Installation</label>
    <type>Checkbox</type>
</CustomField>