force-app/main/default/objects/Installation__c/fields/Battery_Location__c.field-meta.xml
<CustomField>
    <fullName>Battery_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are the batteries in an area that will get hot in summer or cold in winter? (ie loft or garage) consider insulation and heating for winter and cooling in winter.</inlineHelpText>
    <label>Battery Location</label>
    <type>Checkbox</type>
</CustomField>