force-app/main/default/objects/Installation__c/fields/Bird_Mesh__c.field-meta.xml
<CustomField>
    <fullName>Bird_Mesh__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>As the bird proofing is going up, are  you using the correct attachments?</inlineHelpText>
    <label>Bird Mesh</label>
    <type>Checkbox</type>
</CustomField>