force-app/main/default/objects/Installation__c/fields/Check_House_Smart_Meter__c.field-meta.xml
<CustomField>
    <fullName>Check_House_Smart_Meter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If they have a smart meter, check that it is reading some export as just about any system with export something.</inlineHelpText>
    <label>Check House Smart Meter</label>
    <type>Checkbox</type>
</CustomField>