force-app/main/default/objects/Installation__c/fields/Check_Solar_APP__c.field-meta.xml
<CustomField>
    <fullName>Check_Solar_APP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If there&apos;s an app tracking usage, make sure it shows the correct direction of energy flow. So when they charge there EV it should have shown some grid draw, when the kettles boiled it shows draw from solar or batteries?</inlineHelpText>
    <label>Check Solar APP</label>
    <type>Checkbox</type>
</CustomField>