force-app/main/default/objects/Installation__c/fields/Component_serial_numbers__c.field-meta.xml
<CustomField>
    <fullName>Component_serial_numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Component serial numbers.</inlineHelpText>
    <label>Component serial numbers</label>
    <type>Checkbox</type>
</CustomField>