force-app/main/default/objects/Installation__c/fields/Confirm_Support_Info__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Support_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact information for support issues passed to customer - support@brightspark.energy</inlineHelpText>
    <label>Confirm Support Info</label>
    <type>Checkbox</type>
</CustomField>