force-app/main/default/objects/Installation__c/fields/Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inform customer batteries may initially draw from the grid during the day as they&apos;ll likely do a &quot;balance&quot; charge. This can be a bit scary as the daily consumption will go up. If it lasts more than 1 day get the installer back.</inlineHelpText>
    <label>Customer Information</label>
    <type>Checkbox</type>
</CustomField>