force-app/main/default/objects/Installation__c/fields/DNO_Approved__c.field-meta.xml
<CustomField>
    <fullName>DNO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the install will result in total inverter capacity (existing plus new) of greater than 3.68kw, please ask to see the DNO G99 approval before you start.</inlineHelpText>
    <label>DNO Approved</label>
    <type>Checkbox</type>
</CustomField>