force-app/main/default/objects/Installation__c/fields/Earthing_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Earthing_Arrangements__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If a EPS or UPS is being installed ensure it has it&apos;s own earth.</inlineHelpText>
    <label>Earthing Arrangements</label>
    <type>Checkbox</type>
</CustomField>