force-app/main/default/objects/Installation__c/fields/Electrical_Cabling__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Cabling__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the electrician cabling tidy and (ideally) in conduit?</inlineHelpText>
    <label>Electrical Cabling</label>
    <type>Checkbox</type>
</CustomField>