force-app/main/default/objects/Installation__c/fields/Electrical_certificate_Part_B__c.field-meta.xml
<CustomField>
    <fullName>Electrical_certificate_Part_B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electrical certificate (Part B)</label>
    <type>Checkbox</type>
</CustomField>