force-app/main/default/objects/Installation__c/fields/EV_Check__c.field-meta.xml
<CustomField>
    <fullName>EV_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the customer have an EV try and charge there car (even just for 10 minutes) and stopping the charge. This will put some load onto the circuit and when it stops, the energy flow will revert back.</inlineHelpText>
    <label>EV Check</label>
    <type>Checkbox</type>
</CustomField>