force-app/main/default/objects/Installation__c/fields/Generation_meter__c.field-meta.xml
<CustomField>
    <fullName>Generation_meter__c</fullName>
    <label>Generation meter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>