force-app/main/default/objects/Installation__c/fields/Handover_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Handover_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer Handover - specifficaly, how to switch on/off/reset the system. How to know when it&apos;s working to it&apos;s full capacity (ie all panels/batteries are working) How to change the settings (ie to force charge batteries durinng off peak windows)</inlineHelpText>
    <label>Handover to Client</label>
    <type>Checkbox</type>
</CustomField>