force-app/main/default/objects/Installation__c/fields/HIES_Registration_details__c.field-meta.xml
<CustomField>
    <fullName>HIES_Registration_details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HIES Registration details</label>
    <type>Checkbox</type>
</CustomField>