force-app/main/default/objects/Installation__c/fields/Home_Back_up_Check__c.field-meta.xml
<CustomField>
    <fullName>Home_Back_up_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If they&apos;ve had an EPS or UPS installed, have we disabled the grid and see if they can still run appliances.</inlineHelpText>
    <label>Home Back up Check</label>
    <type>Checkbox</type>
</CustomField>