force-app/main/default/objects/Installation__c/fields/Installation_Schematic__c.field-meta.xml
<CustomField>
    <fullName>Installation_Schematic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Schematic of the system on site</inlineHelpText>
    <label>Installation Schematic</label>
    <type>Checkbox</type>
</CustomField>