force-app/main/default/objects/Installation__c/fields/Inverter__c.field-meta.xml
<CustomField>
    <fullName>Inverter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the inverter mounted on heatproof material?</inlineHelpText>
    <label>Inverter</label>
    <type>Checkbox</type>
</CustomField>