force-app/main/default/objects/Installation__c/fields/Inverters__c.field-meta.xml
<CustomField>
    <fullName>Inverters__c</fullName>
    <label>Inverters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>