force-app/main/default/objects/Installation__c/fields/Kit_Matches_Quote__c.field-meta.xml
<CustomField>
    <fullName>Kit_Matches_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The kit that is about to be installed, is this the same as per the quote?</inlineHelpText>
    <label>Kit Matches Quote</label>
    <type>Checkbox</type>
</CustomField>