force-app/main/default/objects/Installation__c/fields/Panel_Cabling__c.field-meta.xml
<CustomField>
    <fullName>Panel_Cabling__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are the wires for the panels loose or cable tied into place to avoid rubbing/wear?</inlineHelpText>
    <label>Panel Cabling</label>
    <type>Checkbox</type>
</CustomField>