force-app/main/default/objects/Installation__c/fields/Railing__c.field-meta.xml
<CustomField>
    <fullName>Railing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do the rails look straight</inlineHelpText>
    <label>Railing</label>
    <type>Checkbox</type>
</CustomField>