force-app/main/default/objects/Installation__c/fields/Roof_Access__c.field-meta.xml
<CustomField>
    <fullName>Roof_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Method of access is this scaffolding or ladders?</inlineHelpText>
    <label>Roof Access</label>
    <type>Checkbox</type>
</CustomField>