force-app/main/default/objects/Installation__c/fields/Roof_Hooks__c.field-meta.xml
<CustomField>
    <fullName>Roof_Hooks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tile hooks are the tiles sitting flat/flush after the hooks are fitted?</inlineHelpText>
    <label>Roof Hooks</label>
    <type>Checkbox</type>
</CustomField>