force-app/main/default/objects/Installation__c/fields/Solar_Panels__c.field-meta.xml
<CustomField>
    <fullName>Solar_Panels__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>As the panels are being fitted, do they look level with each other and aligned/straight ?</inlineHelpText>
    <label>Solar Panels</label>
    <type>Checkbox</type>
</CustomField>