force-app/main/default/objects/Installation__c/fields/Validate_MCS_Flex_orb_certificate_match__c.field-meta.xml
<CustomField>
    <fullName>Validate_MCS_Flex_orb_certificate_match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate MCS/Flex-orb certificate match</label>
    <type>Checkbox</type>
</CustomField>