force-app/main/default/objects/Installation__c/fields/Warning_Labelling__c.field-meta.xml
<CustomField>
    <fullName>Warning_Labelling__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are warning labels in place?</inlineHelpText>
    <label>Warning Labelling</label>
    <type>Checkbox</type>
</CustomField>