force-app/main/default/objects/Installation__c/fields/Warranty_details_registration__c.field-meta.xml
<CustomField>
    <fullName>Warranty_details_registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty details/ registration</label>
    <type>Checkbox</type>
</CustomField>