force-app/main/default/objects/Installation__c/recordTypes/After_Installation_Checklist.recordType-meta.xml
<RecordType>
    <fullName>After_Installation_Checklist</fullName>
    <active>true</active>
    <label>After Installation Checklist</label>
</RecordType>