force-app/main/default/objects/Installation__c/recordTypes/Before_Installation_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Before_Installation_Checklist</fullName>
    <active>true</active>
    <label>Before Installation Checklist</label>
</RecordType>